# scaling-laws

./: .env.example  .gitignore  README.md  RUNBOOK.md  bootsrap_pyproject.ps1  pyproject.toml  results_delivered.csv  run_all.ps1  run_all.sh
configs/: analysis.yaml  data.yaml  model_20m.yaml  model_5m.yaml  model_large.yaml  model_medium.yaml  model_small.yaml  sweep.yaml  sweep_large.yaml  sweep_medium.yaml  sweep_small.yaml  tokenizer.yaml  train_base.yaml  training_curves.yaml
models/: param_count.py
reports/: report.md
reports/sections/: appendix_tokenizer_methodology.md  compute_frontier.md  data_preprocessing.md  experiment_grid.md  limitations.md  model_architecture.md  model_configs.md  scaling_fits.md  tokenizer.md
reports/tables/: cleaned_results.csv  compute_frontier.csv  experiment_grid.csv  model_configs.csv  results.csv  training_curves_summary.csv
results/: compute_frontier.csv  results.csv
scripts/: 01_profile_tokenizer.ps1  01_tokenizer.ps1  01_tokenizer.sh  02_prepare_data.ps1  02_prepare_data.sh  02_train_tokenizer.ps1  03_prepare_data.ps1  03_train_model.ps1  03_train_model.sh  04_run_single_experiment.ps1  04_run_sweep.ps1  04_run_sweep.sh  05_fit_scaling_laws.sh  05_run_sweep.ps1  06_compute_frontier.sh  06_fit_scaling_laws.ps1  07_compute_frontier.ps1  08_plot_training_curves.ps1  08_plot_training_curves.sh
src/scaling_laws/analysis/: compute_frontier.py  fit_scaling_laws.py  plot_training_curves.py
src/scaling_laws/data/: collator.py  dataset.py  prepare_data.py
src/scaling_laws/models/: config.py  (+2 more)
tests/: test_tokenizer.py
(+9 files in other folders)
